--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.js">
+    <link rel="stylesheet" href="style.css">
     <title> sistema de controle CLT </title>
 </head>
 <body>
+    <div class="data-hora">
+    <p id="dia-semana"> Segunda-feira</p>
+    <p id="dia-mes-ano">26/08/2024</p>
+    <p id="dia-hora-min-seg">8:41</p>
+    </div>
+    <button>Bater Ponto</button>
+
     
 
     
