--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <p id="dia-hora-min-seg">8:41</p>
     </div>
     <button id="btn-bate-ponto">Bater Ponto</button>
+    <dialog>
+
+
+        
+    </dialog>
 
     
 
