--- a/index.html
+++ b/index.html
@@ -3,25 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="css/style.css">
-    
-    <title> sistema de controle CLT </title>
+    <title>Sistema de Controle CLT</title>
 </head>
 <body>
     <div class="data-hora">
-    <p id="dia-semana"> Segunda-feira</p>
-    <p id="dia-mes-ano">26/08/2024</p>
-    <p id="dia-hora-min-seg">8:41</p>
+        <p id="dia-semana">Segunda-feira</p>
+        <p id="dia-mes-ano">26/08/2024</p>
+        <p id="dia-hora-min-seg">8:41</p>
     </div>
-    <button id="btn-bate-ponto">Bater Ponto</button>
+    <button id="btn-bater-ponto">Bater Ponto</button>
     <dialog id="dialog-ponto">
-        <p>data</p>
-        <p>hora</p>
-        <button>entrada</button>
+        <p id="dialog-data">Data</p>
+        <p id="dialog-hora">Hora</p>
+        <button>Entrada</button>
         <button>Intervalo</button>
-        <button>Volta Intervalo</button>
-        <button>saída</button>
+        <button>Volta do Intervalo</button>
+        <button>Saída</button>
         <button id="btn-fechar-dialog">x</button>
     </dialog>
     <script src="index.js"></script>
