--- a/index.html
+++ b/index.html
@@ -3,25 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistema de Controle de Ponto</title>
     <link rel="stylesheet" href="css/style.css">
-    <title>Sistema de Controle CLT</title>
 </head>
 <body>
+    <div id=" alerta-registro-ponto" class="show">
+        <p>ponto registrado com sucesso </p>
+    </div>
     <div class="data-hora">
         <p id="dia-semana">Segunda-feira</p>
         <p id="dia-mes-ano">26/08/2024</p>
-        <p id="dia-hora-min-seg">8:41</p>
+        <p id="hora-min-seg">08:01:35</p>
     </div>
-    <button id="btn-bater-ponto">Bater Ponto</button>
+    <button id="btn-bater-ponto">Bater ponto!</button>
     <dialog id="dialog-ponto">
-        <p id="dialog-data">Data</p>
-        <p id="dialog-hora">Hora</p>
-        <button>Entrada</button>
-        <button>Intervalo</button>
-        <button>Volta do Intervalo</button>
-        <button>Saída</button>
-        <button id="btn-fechar-dialog">x</button>
+        
+        <p id="dialog-data"></p>
+        <p id="dialog-hora"></p>
+        <select name="tipos-ponto" id="tipos-ponto">
+            <option value="entrada">Entrada</option>
+            <option value="intervalo">Intervalo</option>
+            <option value="volta-intervalo">Volta Intervalo</option>
+            <option value="saida">Saída</option>
+        </select>
+        <button id="btn-dialog-bater-ponto">Registrar ponto</button>
+        <p id="dialog-last-register"></p>
+        <button id="btn-dialog-fechar">X</button>
     </dialog>
-    <script src="index.js"></script>
+ 
+    <script src="js/index.js"></script>
 </body>
 </html>
