--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <p id="dia-mes-ano">26/08/2024</p>
         <p id="hora-min-seg">08:01:35</p>
     </div>
-    <button id="btn-bater-ponto">Bater ponto!</button>
+    <div ontouchstart="">
+        <div class="button">
+          <a href="#">bate ponto</a>
+        </div>
+      </div>
+     
     <dialog id="dialog-ponto">
         
         <p id="dialog-data"></p>
