--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <p>Ponto registrado com sucesso!</p>
     </div>
 
-    <script src="js/index.js"></script>
+
+    <script src="index.js"></script>
 </body>
 </html>
