--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Ponto Eletrônico</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="html/relatorio.html">
 </head>
 <body>
     <div class="data-hora">
@@ -28,11 +29,14 @@
         <button id="dialog-fechar">X</button>
     </dialog>
 
+    <button id="abrir-dialog"> relatorio </button>
+
     <div id="alerta-ponto-registrado" class="hidden">
         <p>Ponto registrado com sucesso!</p>
     </div>
 
 
     <script src="index.js"></script>
+    <script src="js/bateponto.js"></script>
 </body>
 </html>
